# Minimarket

./: Dockerfile  Makefile  Readme.md  data.json  pyproject.toml
minimarket/: manage.py
minimarket/minimarket/: asgi.py  settings.py  urls.py  wsgi.py
minimarket/products/: models.py  serializers.py  tests.py  urls.py  views.py
minimarket/products/migrations/: 0001_initial.py  0002_alter_category_options.py
